vercel homepage commit json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://venkat210105.github.io/TextUtils_App",
+  "homepage": "https://textutils-red-ten.vercel.app/",
   "name": "textutils",
   "version": "0.1.0",
   "private": true,
