--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "jspdf": "^3.0.1",
     "mammoth": "^1.9.0",
     "pdf-lib": "^1.17.1",
+    "pdfjs-dist": "^5.1.91",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.1",
